fixing typing in node input making cursor jump, memoizing nodes, fixing new uniforms being added to the graph, fixing node deletions

--- a/src/site/styles/flow.theme.css
+++ b/src/site/styles/flow.theme.css
@@ -129,6 +129,7 @@
 /* -------------- */
 .flownode.number {
   background: rgb(6, 16, 68);
+  min-height: 80px;
 }
 .flownode.number input {
   width: 50%;
